# mongosh

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.default.toml
docs/: README.md  arithmetic-operations.md  array-indexing.md  datetime-functions.md  method-support.md  model-contex-protocol.md  named-queries.md  query-explain.md  shell-completion.md
src/: README.md  lib.rs  main.rs
src/cli/: completion.rs  mod.rs
src/config/: mod.rs
src/connection/: mod.rs
src/error/: kinds.rs  mod.rs  mongo.rs
src/executor/: admin.rs  confirmation.rs  context.rs  export.rs  killable.rs  mod.rs  mod.rs.bak  query.rs  result.rs  router.rs  utility.rs
src/executor/export/: coordinator.rs  mod.rs  progress.rs  streaming.rs
src/executor/export/writers/: csv.rs  jsonl.rs  mod.rs
src/executor/query/: aggregate.rs  explain.rs  find_and_modify.rs  mod.rs  read.rs  write.rs
src/formatter/: colorizer.rs  json.rs  mod.rs  shell.rs  stats.rs  table.rs
src/formatter/bson_utils/: converter.rs  helpers.rs  mod.rs  strategies.rs  tests.rs
src/mcp/: mod.rs
src/mcp/security/: manager.rs  mod.rs
src/mcp/server/: handler.rs  mod.rs
src/mcp/tools/: mod.rs  params.rs
src/mcp/utils/: converter.rs  mod.rs
src/parser/: command.rs  db_operation.rs  expr_converter.rs  mod.rs  mongo_ast.rs  mongo_converter.rs  mongo_lexer.rs  mongo_operation.rs  mongo_parser.rs  shell_commands.rs  sql_context.rs  sql_expr.rs  sql_lexer.rs  sql_parser.rs
src/parser/mongo_operation/: admin_ops.rs  args.rs  chain.rs  mod.rs  options.rs  query_ops.rs
src/parser/sql_parser/: column.rs  converter.rs  expr.rs  field.rs  mod.rs  tests.rs
src/plugins/: mod.rs
src/repl/: ai_completion.rs  ai_query.rs  completer.rs  completion.rs  cursor_state.rs  engine.rs  helper.rs  highlighter.rs  hinter.rs  mod.rs  prompt.rs  shared_state.rs  tests.rs  validator.rs
src/repl/ai_context/: generator.rs  mod.rs  reader.rs  sampler.rs
src/repl/completion/: context.rs  engine.rs  fsm.rs  mod.rs  provider.rs  token_stream.rs
src/script/: mod.rs
src/utils/: mod.rs
tests/: explain_tests.rs  mcp_integration.rs
