[package]
name = "mongosh"
version = "0.6.0"
edition = "2024"
rust-version = "1.91"
authors = ["guoyunlei"]
description = "A high-performance MongoDB Shell implementation in Rust"
license = "MIT"
repository = "https://github.com/daleione/mongosh"
keywords = ["mongodb", "shell", "database", "repl", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
mongodb = "=3.2.5"
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
reedline = "0.44"
crossterm = "0.29"
nu-ansi-term = "0.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"
colored_json = "5"
bson = "2.15"
hex = "0.4"
base64 = "0.22"
futures = "0.3"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
oxc = { version = "0.106", features = ["full"] }
tabled = "0.20.0"
polars = { version = "0.51.0", features = ["lazy", "csv", "parquet", "json"] }
polars_excel_writer = "0.21"
chrono = "0.4"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
