[package]
name = "mongosh"
version = "0.9.0"
edition = "2024"
rust-version = "1.91"
authors = ["guoyunlei"]
description = "A high-performance MongoDB Shell implementation in Rust"
license = "MIT"
repository = "https://github.com/daleione/mongosh"
keywords = ["mongodb", "shell", "database", "repl", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
mongodb = "=3.2.5"
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
reedline = "0.45"
crossterm = "0.29"
nu-ansi-term = "0.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
toml_edit = "0.24"
colored_json = "5"
bson = "2.15"
hex = "0.4"
base64 = "0.22"
futures = "0.3"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tabled = "0.20.0"
chrono = "0.4"
indicatif = "0.17"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
hostname = "0.4"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
